style.css
/* ... */
b,
strong,
em,
small,
code {
  line-height: 1;
}

.skip {
  position: absolute;
  top: -100%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9999;
  padding: 12px;
  background-color: var(--color-primary-dark);
  color: var(--color-text-dark);
  text-decoration: none;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  transition: top 0.3s ease;
}

.skip:focus {
  top: 0;
}

/**
	 * Global Styles
	 */
.main-content-width-wrapper {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 var(--space-m);
  margin-top: var(--space-m);
}

p {
  max-width: 650px;
}

.leesmeer {
  text-decoration: none;
}

#main-menu a,
#main-menu a:visited,
#main-menu {
  color: var(--color-text-dark);
}

.call-to-action {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: var(--space-m);
}

.button {
  text-transform: uppercase;
  text-align: center;
  padding: var(--space-xs) var(--space-xs);
  background-color: var(--color-text-dark);
  color: var(--color-text-light);
  border-radius: 6px;
  text-decoration: none;
  min-width: 180px;
}

.button:hover {
  transition: var(--transition-default);
  background-color: var(--color-bg-dark);
  color: var(--color-text-light);
}

.clinic-content a,
.button a {
  color: var(--color-text-light);
  text-decoration: none;
}

.contactform {
  list-style-type: none;
  padding-left: 0;
}

.contactform label {
  width: 70px;
}

.contactform li {
  padding-bottom: 8px;
}

.contactform textarea {
  width: 100%;
  height: 150px;
  padding: 12px 20px;
}

.contactform .enroll-button {
  float: left;
}

/**
	 * Header Styles
	 */
.header {
  background-color: var(--color-text-light);
  height: 70px;
  z-index: 90;
  margin: 0 auto;
  border-bottom: 1px solid #dadada;
  width: 100%;
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  min-height: 125px;
}

.logo {
  width: 200px;
  height: auto;
  display: block;
  float: left;
  margin-left: var(--space-m);
  margin-top: var(--space-m);
}

.main-navigation {
  float: right;
  margin-top: var(--space-m);
}

.main-navigation li {
  list-style-type: none;
  float: left;
  margin-right: var(--space-m);
}

.main-navigation a {
  color: var(--color-text-muted);
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  display: block;
  padding: 0 var(--space-m);
  transition: var(--transition-default);
}

.main-navigation a:hover {
  color: var(--color-accent-green);
}

#menu-icon {
  display: none;
}

.dropdown-menu {
  z-index: 99;
}

.bg-light {
  background-color: var(--color-text-light) !important;
}

.container-fluid {
  width: 80%;
}

.navbar-collapse {
  flex-grow: 0;
  margin-top: var(--space-m);
}

.dropdown-item.active,
.dropdown-item:active {
  background-color: var(--color-primary-light);
}

#google_language_translator {
  margin-top: var(--space-m);
}

/**
	 * Footer Styles
	 */
.footer {
  font-size: var(--step--1);
  padding: var(--space-m) 0 var(--space-3xl) 0;
  background: var(--color-bg-dark);
  clear: both;
  min-height: 370px;
}

.footer-navigation {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  list-style-type: none;
}

@media (max-width: 576px) {
  .footer-navigation {
    grid-template-columns: 1fr;
  }
}

.footer-navigation a {
  color: var(--color-text-light);
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  display: block;
  padding: 0 var(--space-m);
  transition: var(--transition-default);
}

.footer-navigation a:hover {
  color: var(--color-primary);
}

.footer-navigation a:active {
  color: var(--color-primary-light);
}

.copyright {
  color: var(--color-text-light);
  max-width: 960px;
  margin: var(--space-2xl) auto;
  clear: left;
  text-align: center;
}

.boekhouding {
  max-width: 960px;
  margin: var(--space-2xl) auto;
  clear: left;
  text-align: center;
}

/**
	 * Sidebar Styles
	 */
.sidebar {
  background: var(--color-primary-light);
  float: right;
  width: 30%;
  padding: var(--space-m);
}

.sidebar .widget-title,
.sidebar .widget_text {
  color: #000;
}

.sidebar a,
.sidebar h1,
.sidebar h2 {
  color: #000;
}

/**
 * Front-Page/Home Template
 */
.home h1,
.home h2,
.home h3 {
  color: #000;
}

.hero {
  display: flex;
  flex-direction: column;
  width: 100%;
}

@media (min-width: 768px) {
  .hero {
    position: relative;
  }

  .hero-content {
    position: absolute;
    bottom: 24px;
    right: 24px;
    width: auto;
    max-width: 400px;
  }
}

.home-hero-section {
  background-size: cover;
  min-height: 510px;
}

.webp .home-hero-section {
  background: url(images/home-hero-background.webp) no-repeat;
  background-size: cover;
  background-position: top;
}

.no-webp .home-hero-section {
  background: url(images/home-hero-background.jpg) no-repeat;
  background-size: cover;
  background-position: top;
}

.home-clinic-section {
  background-color: var(--color-bg-dark);
}

.hero-content {
  background: var(--color-primary);
  min-width: 520px;
  padding: var(--space-xs);
}

.hero-content p {
  font-size: var(--step-1);
  font-weight: 300;
  line-height: 1.3em;
  margin-top: 1.1em;
}

.clinic-content {
  background: var(--color-primary);
  padding: var(--space-2xs) var(--space-xs);
  margin: var(--space-m) auto 0;
  text-align: left;
  color: #000;
}

.clinic-content p {
  font-size: var(--step-1);
  font-weight: 300;
  line-height: 1.3em;
  margin-top: var(--space-m);
}

.info-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: var(--space-m);
}

@media (max-width: 576px) {
  .info-section {
    grid-template-columns: 1fr;
    gap: none;
  }
}

.home-philosophy-section,
.home-location-section {
  font-size: var(--step-1);
  line-height: 1.3em;
  color: var(--color-text-light);
  margin-top: var(--space-m);
  margin-bottom: var(--space-m);
  padding: var(--space-2xs);
  text-align: center;
}

.home-philosophy-section {
  background-color: var(--color-bg-dark);
  background-size: cover;
  float: left;
}
/* ... */

